<resources>
    <string name="app_name">DeTaiAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="signUp">Đăng ký</string>
    <string name="loginSDT">Nhập số điện thoại</string>
    <string name="loginPassword">Nhập mật khẩu</string>
    <string name="confirmPassword">Nhập lại mật khẩu</string>
    <string name="loginForget">Quên mật khẩu</string>
    <string name="Continue">Tiếp tục</string>
    <string name="complete">Hoàn tất</string>

</resources>