<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextNhapSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="phone"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="25dp"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="12"
            android:gravity="center_horizontal"
            android:hint="@string/loginSDT"/>
        <EditText
            android:id="@+id/editTextNhapMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="numberPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:lines="1"
            android:textSize="25dp"
            android:maxLength="12"
            android:layout_below="@id/editTextNhapSDT"
            android:hint="@string/loginPassword"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextNhapMK"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:textAllCaps="false"
            android:paddingBottom="15dp"
            android:textSize="27dp"
            android:textColor="#FFFFFF"
            android:text="@string/login"
            >
        </Button>
        <TextView
            android:id="@+id/txtForget"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textColor="#0085FF"
            android:textSize="17dp"
            android:autoLink="all"
            android:clickable="true"
            android:text="@string/loginForget"
            android:layout_below="@+id/btnLogin"
            >

        </TextView>
    </RelativeLayout>

</FrameLayout>